increase the z-index of the menu to make sure it appears on top of other elements

--- a/de.jwic.web/resources/jwic/jwic.css
+++ b/de.jwic.web/resources/jwic/jwic.css
@@ -557,6 +557,10 @@ span.j-listColSel-clearSearch {
 	height:20px;	
 }
 
+.j-menu {
+	z-index: 10;
+}
+
 .default-tooltip{
 	background : #ffffff;
 	color: #000000;
